--- a/Mind_Intervention_Autism_RF.ipynb
+++ b/Mind_Intervention_Autism_RF.ipynb
@@ -5,11 +5,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "q8aQPs1C18IF",
-        "oE_xyUHhHmPF"
+        "N-jFcEXY18iB",
+        "q8aQPs1C18IF"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnKbeHBvwO+jnHNIQPEjPu",
+      "authorship_tag": "ABX9TyMppUy2MRvhs+lZFjDz7r2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1282,8 +1282,8 @@
     {
       "cell_type": "code",
       "source": [
-        "test = fi_df.copy()\n",
-        "test = test.groupby(test.columns, axis=1).sum()\n",
+        "fi_df_copy = fi_df.copy()\n",
+        "fi_df_copy = fi_df_copy.groupby(fi_df_copy.columns, axis=1).sum()\n",
         "save_to_drive = test.sort_values(by=['importances'], ascending=False).head(10)\n",
         "save_to_drive"
       ],
@@ -2723,8 +2723,9 @@
     {
       "cell_type": "code",
       "source": [
-        "test = fi_df.copy()\n",
-        "test = test.groupby(test.columns, axis=1).sum()\n",
+        "fi_df_copy = fi_df.copy()\n",
+        "\n",
+        "fi_df_copy = fi_df_copy.groupby(fi_df_copy.columns, axis=1).sum()\n",
         "save_to_drive = test.sort_values(by=['importances'], ascending=False).head(10)\n",
         "save_to_drive"
       ],
